--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://sohanb0604:sohan642005@cluster0.onqy4qn.mongodb.net/farmako?appName=Cluster0
+MONGO_URI=mongodb://localhost:27017/farmako-plus
 JWT_SECRET=supersecretkey12345
 PORT=5000
